# libfswatch-cmake

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
easy/: FileTailF.cpp  FileTailF.h
test/: auditdlog_watcher.cpp  tailf.cpp
